Removed automatic handling of canvas

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Lager-Appen</title>
+    <title>Trafik-Appen</title>
 
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Lager-Appen</h1>
-    <p>Snart börjar vi!</p>
+    <h1>Trafik-Appen</h1>
+    <p>Nu är vi igång!</p>
 </body>
 </html>
