Updated map with real time delayed trains.
Added custom popup-div

Updated navbar with icons

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             http-equiv="Content-Security-Policy"
             content="
                 default-src 'self';
-                connect-src 'self' https://lager.emilfolino.se https://nominatim.openstreetmap.org ws://localhost:5500 data: https://upload.uploadcare.com https://lager-chat.emilfolino.se wss://lager-chat.emilfolino.se https://trafik.emilfolino.se/;
+                connect-src 'self' https://lager.emilfolino.se https://nominatim.openstreetmap.org ws://localhost:5500 data: https://upload.uploadcare.com https://lager-chat.emilfolino.se wss://lager-chat.emilfolino.se https://trafik.emilfolino.se wss://trafik.emilfolino.se;
                 script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;
                 style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
                 img-src 'self' https://tile.openstreetmap.org https://unpkg.com https://ucarecdn.com;
