--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
             http-equiv="Content-Security-Policy"
             content="
                 default-src 'self';
-                connect-src 'self' https://lager.emilfolino.se https://nominatim.openstreetmap.org ws://localhost:5500 data: https://upload.uploadcare.com https://lager-chat.emilfolino.se wss://lager-chat.emilfolino.se https://trafik.emilfolino.se wss://trafik.emilfolino.se;
-                script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;
-                style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+                connect-src 'self' https://lager.emilfolino.se https://nominatim.openstreetmap.org ws://localhost:5500 data: https://upload.uploadcare.com https://lager-chat.emilfolino.se wss://lager-chat.emilfolino.se https://trafik.emilfolino.se wss://trafik.emilfolino.se https://cdn.socket.io https://unpkg.com;
+                script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdn.socket.io https://unpkg.com;
+                style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://unpkg.com;
+                font-src 'self' https://fonts.gstatic.com;
                 img-src 'self' https://tile.openstreetmap.org https://unpkg.com https://ucarecdn.com;
             "
         />
