--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdn.socket.io https://unpkg.com;
                 style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://unpkg.com;
                 font-src 'self' https://fonts.gstatic.com;
-                img-src 'self' https://tile.openstreetmap.org https://unpkg.com https://ucarecdn.com;
+                img-src 'self' data: https://tile.openstreetmap.org https://unpkg.com https://ucarecdn.com;
             "
         />
 
